# spmetrics

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: compute_bandwidth.md  compute_cmrr.md  compute_icmr.md  compute_leakage_power.md  compute_offset.md  compute_output_swing.md  compute_phase_margin.md  compute_unity_gain_bandwidth.md
examples/: 180nm_bulk.txt  autockt_original_impl.py  autockt_spmetrics.py  extract_opamp_metrics.py  liuLLMbasedAIAgent2025.cir  liuLLMbasedAIAgent2025_optimized_g1-5.cir  liuLLMbasedAIAgent2025_optimized_g2-4.cir  settaluriAutoCktDeepReinforcement2020.cir  settaluriAutoCktDeepReinforcement2020_34_34_34_34_34_15_2.1e-12.cir  two_stage_opamp.yaml
models/: 45nm_bulk.txt
spmetrics/: __init__.py  extractor.py  metrics.py  utils.py
tests/: test_extractor.py
