[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spmetrics"
version = "0.1.0"
description = "Analog performance metric extractor from ngspice simulation results"
authors = [{name = "Your Name", email = "your@email.com"}]
dependencies = ["numpy", "scipy", "pandas"]